--- a/donate.css
+++ b/donate.css
@@ -23,18 +23,11 @@
 	background-color: #D6D6EB;
 	
 	
-
-	
-
-	background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%) , url('https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)');
-	background-size: 1270px;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
 
-	
+	background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%) , url('https://wpsimplepay.com/wp-content/uploads/2019/02/FEATURED-How-to-Set-Suggested-Donation-Amounts-That-Drive-Conversions.png)');
   
-
 	
   /* WHITE OPACITY 
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7) 0%,rgba(255, 255, 255, 0.7) 100%), url(https://wpsimplepay.com/wp-content/uploads/2019/02/FEATURED-How-to-Set-Suggested-Donation-Amounts-That-Drive-Conversions.png);
@@ -166,18 +159,8 @@
 		margin: 10px;
 	padding: 10px;
 	}
-	
 }
-@media screen and (max-width: 600px) {
-	.column {
-	  width: 100%;
-	}
-	.m{
-		background-size: 400px;
-		background-repeat: repeat;
-	}
-  }
-  
+
 .item {
     display: flex;
     flex-direction: column;
